falta el rectangulo del TP 3.