@@ -8,14 +8,17 @@ import static org.junit.jupiter.api.Assertions.*;
 public class ProductoPrimeraNecesidadTest {
 
 	private ProductoPrimeraNecesidad leche;
+	private ProductoPrimeraNecesidad manteca;
 	
 	@BeforeEach
 	public void setUp() {
-		leche = new ProductoPrimeraNecesidad("Leche", 8d, false);
+		leche = new ProductoPrimeraNecesidad("Leche", 8d, false, 10);
+		manteca = new ProductoPrimeraNecesidad("Manteca", 100.0, false, 20);
 	}
 	
 	@Test
 	public void testCalcularPrecio() {
-		assertEquals(new Double(7.2), leche.getPrecio());
+		assertEquals(Double.valueOf(7.2), leche.getPrecio());
+		assertEquals(Double.valueOf(80.0), manteca.getPrecio());
 	}
 }
